# contrivance

./: .env.example  .gitignore  ARCHITECTURE.md  BRANCH_SUMMARY.md  Cargo.toml  DEPLOYMENT_SUCCESS.md  DISCOVERY_401_CONTINUED_FIX.md  DISCOVERY_API.md  DISCOVERY_AUTH_TEST_GUIDE.md  DISCOVERY_FEATURE_OVERVIEW.txt  DISCOVERY_FIX_401_UNAUTHORIZED.md  DISCOVERY_MODULE.md  DISCOVERY_MODULE_SUMMARY.md  DISCOVERY_PERSISTENCE_DEBUG.md  DOCKER.md  DOCUMENTATION_INDEX.md  GROK_BRANCH_SUMMARY.md  GROK_INTEGRATION_GUIDE.md  ITERATION_COMPLETE_DISCOVERY_FIX.md  ITERATION_UPDATE_DISCOVERY_DEBUG.md  PHASE2_COMPLETE.md  PHASE2_SUMMARY.md  PHASE3_COMPLETE.md  PHASE3_INTEGRATION_GUIDE.md  PHASE3_QUICKSTART.md  PHASE3_QUICK_REFERENCE.md  PHASE3_TEST_PLAN.md  PROJECT_STATUS.md  QUICK_START_DISCOVERY_FIX.md  README.md  RELEASE_NOTES.md  SALESFORCE_INTEGRATION_GUIDE.md  debug_jwt.html  docker-compose.yml  test_enterprise.json  validate_template.js
.sqlx/: query-0c914304feed77f94388e188f83bf2acf191047b7706f064b509f1dd2dd5d506.json  query-1a4eafd6978a7fed45e01c3b343ffb3df36427d5676345b3f1bbae5f06e1bdd3.json  query-1d715fbbcfb579fc8349788a27c23b50335eccb2306d482b0b23e3fc358f81d7.json  query-1e23119e19e6f519589a02c585049e2228faa964fe23a829d0ffe2f500250dab.json  query-1fa2b8d5e617bb5ba58d2950bd3be2f1ef8eb6a702f6a6b190b35be761248f5b.json  query-20f7a237c6d7669372b0a7d2d0c03235e5c21ec2c8e96fc024348992dcb28af1.json  query-22a0d337538637f7971b85e2aa1420b5619aa93a607997a5d9100fecdc810427.json  query-289b5823ac774c5ceadf81fd3df2728267e99736162e48d88f2a8c73718f6585.json  query-47ef5e65b546cf8e1fbc70671c69d9a18438c7ba6902f331824650494a89a076.json  query-4ae38818fc7199ef6543d72e452ce3de041d298f97966e1634e3f94722fadf25.json  query-4e46c4cf3923d353f3fd732f1672990d4ac4d9dd40f502b1e1f5515166f3a489.json  query-52b34883384ddcbff0d0a0c3791d857d3985046209e91f1a2bc9e36e7568c783.json  (+13 more)
database/: schema.sql  seed.sql
frontend/: Dockerfile  nginx.conf  (+2 more)
services/auth-service/: Cargo.toml  Dockerfile
services/auth-service/.sqlx/: query-b5d506195d8a3b176ddeca2ae97929da0f707e812c42d61ac36a0e1ce97e21c6.json  query-b68d3ea898ef7a126ffb3c0c3edbe54abb9ec97c39825991b290296fd28a54ba.json
services/auth-service/src/: config.rs  handlers.rs  main.rs  middleware.rs  repository.rs  service.rs
services/contrivance-service/: Cargo.toml  Dockerfile
services/contrivance-service/.sqlx/: query-037be4082abf6c3f4ece221f6b3e06035aea7a3af158cf0b12a4801511d66509.json  query-22acb8d5eb9c83b0563cfba5bae71a9642d00c34695e200c139e15ea357a15a2.json  query-335842c480cda3233e7a027665bb126d7eab51935d54bf600a24a3daddd5340d.json  query-4fee35c7ad4aa35f8dbdcb6cf31a4e33ac1740b04742786dffdde8fcbf8017ad.json  query-520eb1261f23ec536b1b27f3019d41dc33ef17e22b59654774a68189ea34f8bc.json  query-77220d7016f99f70ec3127b6b84f650f1f8c8cb683bee51f6d6b5d231fd3d63e.json  query-7c0a915e6385f4e909a74f00693338b50cdc03671c18d50b9a4f2728b804b970.json  query-823596517868012493acde3556c614f8f5e1e085778118a99e232a31a5977ee9.json  query-962b53832166d41a707677fb7538ea3a2132dd2e85faaf707803dd2c80be1ce7.json  query-a193c9ec112bd26e6f19509b03e883f3c6a5daa178a330ecee289e2f64615d19.json  query-a1b49d1b33c0064a5c6e8aee6f03ddcaec7e23daff1ae3f1ee7b56ee5127c912.json  query-a7633fb79f91a72b2db03fc1a45ae2217cfb0d42a8c30b328e0b962b2da063fd.json  query-b8df150a34a3683191210746089d21f2fba68c299bdf397810b7650490c88140.json  query-ba2e478be8c334e09370fd3ef4a2f0d5fe531999e52e2bf3b80db107a1c915c1.json  query-c1b95cc1184af92238b2419d00332b3e16aca30854ff6b68a4bc4a7a29aed6f4.json  query-c8ed0bdc6593dee934fa2432d1d749e796cb9f9cddd8c352efb7a9bed61eb072.json  query-cbe46638778f9c105be920c0281886327df01afd8ced084a601e462fde8f6ab8.json  query-d22b34d06ae41003589a047ff4ba4d007ef78ad38dd2fda2dfed4113dadec162.json  query-da23f655a19f228e1c012deed36026bef0f0b35070a6491be677407c3429f2aa.json
services/contrivance-service/src/: config.rs  discovery_handlers.rs  discovery_models.rs  discovery_repository.rs  handlers.rs  main.rs  repository.rs  todo_handlers.rs  websocket.rs
services/contrivance-service/src/middleware/: auth.rs
services/gateway-service/: Cargo.toml  Dockerfile
services/gateway-service/src/: config.rs  grok_proxy.rs  main.rs  proxy.rs
services/gateway-service/src/middleware/: auth.rs  rate_limit.rs
services/salesforce-service/: Cargo.toml  Dockerfile
services/salesforce-service/migrations/: 20241011000001_create_salesforce_connections.sql
services/salesforce-service/src/: auth.rs  database.rs  handlers.rs  main.rs  models.rs  salesforce.rs
shared/common/: Cargo.toml
shared/common/migrations/: 001_initial.sql
shared/common/src/: auth.rs  database.rs  errors.rs  jwt.rs  lib.rs  models.rs  utils.rs
(+46 files in other folders)
