[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID support
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Database support
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# JWT support
jsonwebtoken = "9.0"

# HTTP support
reqwest = { version = "0.11", features = ["json"] }
actix-web = "4.4"

# Async utilities
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Random generation
rand = "0.8"

# Cryptographic hashing
sha2 = "0.10"

# Regular expressions
regex = "1.10"

# Logging
tracing = "0.1"

# Password hashing
bcrypt = "0.15"

# Environment variables
dotenv = "0.15"